--- a/Mohitexp2.1
+++ b/Mohitexp2.1
@@ -33,6 +33,9 @@ vector<int> result = twoSum(nums, target);
 cout << "Indexes: [" << result[0] << ", " << result[1] << "]" << endl; return 0;
 }
 
+4.	Output:
+Indexes: [0,1]
+
 5.	Learning Outcome:
 •	Learn how to use hash maps to efficiently solve problems that require quick lookups for complements or matches in arrays.
 •	Learn to optimize brute force approaches (O(n²)) into linear time solutions (O(n)) by leveraging hash maps for complement checks.
